improve code quality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,19 @@ version: '3.9'
 services:
   database:
     image: library/postgres:14.0-alpine
-    container_name: nest-postgres
+    restart: always
     ports:
       - '5432:5432'
-    networks:
-      - backend
+    volumes:
+      - postgres_data:/var/lib/postgresql
     environment:
       POSTGRES_PASSWORD: '0000'
   api:
     build: .
-    container_name: nest_api
+    restart: always
     ports:
       - '3000:3000'
     depends_on:
       - database
-    networks:
-      - backend
-networks:
-  backend:
-    driver: bridge
+volumes:
+  postgres_data:
